--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,53 @@
+aiohttp
+colorthief
+async-timeout
+beautifulsoup4
+bs4
 git+https://github.com/Rapptz/discord.py@rewrite
+certifi
+motor
+cffi
+asyncpg
+pynite
+pymoe
+pymongo
+mongokit
+chardet
+psycopg2-binary
+pyfiglet
+clashroyale
+openweathermapy
+gitdb2
+fuzzywuzzy
+GitPython
+pytz
+idna
+youtube_dl
+isodate
+spotipy
+python-Levenshtein
+imgurpython
+multidict
+psutil
+pycparser
+PyNaCl
+requests
+six
+smmap2
+urllib3
+websockets
+requests
+ftfy
+yarl
+lxml
+mtranslate
+colorthief
+pyparsing
+sympy
+psutil
+emoji
+wikipedia
+crasync
+cr-py
+urban-async
+safygiphy
